# factory-rust

./: Cargo.toml  Justfile  README.md  rust-toolchain.toml
factory/: Cargo.toml  build.rs
factory/src/: deploy.rs  lib.rs
factory/tests/: sandbox.rs
product-donation/: Cargo.toml
