[workspace]
members = [
    "factory",
    "product-donation",
]
resolver = "2"

[workspace.dependencies]
near-sdk = { version = "5.1.0", git = "https://github.com/dj8yfo/near-sdk-rs.git", branch = "add_contract_metadata" }

[workspace.package]
repository = "https://github.com/dj8yfo/factory-rust"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
