[workspace]
members = [
    "factory",
    "product-donation",
]
resolver = "2"

[workspace.dependencies]
near-sdk = { version = "5.5.0" }

[workspace.package]
repository = "https://github.com/dj8yfo/factory-rust"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
