[package]
name = "factory"
description = "Factory Contract Example"
version = "0.1.13"
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# fields to configure build with WASM reproducibility, according to specs  
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md 
# image from sourcescan:latest
# image from cargo-near pull#198
[package.metadata.near.reproducible_build]
# image from cargo-near pull#198
image = "dj8yfo/sourcescan:0.x.x-dev-pr-228"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:35b35645c33d6271d06e339f7bfd1bfc276384e7285767a25c30506f4aeb3d03"
# build command inside of docker container 
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = ["cargo", "near", "build", "--no-default-features", "--features", "near-sdk/expensive-debug"]

[build-dependencies]
env_logger = "0.9"
log = "0.4"

[build-dependencies.cargo-near-build]
version = "0.2.0"
features = ["build_script"]
git = "https://github.com/dj8yfo/cargo-near.git"
rev = "973c4d86230036b1c6f4a3c0f15db16d9e0415ff"

[dependencies]
near-sdk = { workspace = true, features = ["unstable"] }

[dev-dependencies.cargo-near-build]
version = "0.2.0"
git = "https://github.com/dj8yfo/cargo-near.git"
rev = "973c4d86230036b1c6f4a3c0f15db16d9e0415ff"

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
env_logger = "0.9"
