[package]
name = "factory"
description = "Factory Contract Example"
version = "0.1.13"
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# fields to configure build with WASM reproducibility, according to specs  
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md 
# image from sourcescan:latest
# image from cargo-near pull#198
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:git-e3c8adb4b5542cbfc159bb1534f2b94c900c1648-1.80.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:4bbcdf985936e1cb9b71c627a00cb9b53546ac0c9ef6b175da2918c1dea21363"
# build command inside of docker container 
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = ["cargo", "near", "build", "--no-default-features", "--features", "near-sdk/expensive-debug"]

[build-dependencies]
env_logger = "0.9"
log = "0.4"

[build-dependencies.cargo-near-build]
version = "0.2.0"
features = ["build_script"]
git = "https://github.com/dj8yfo/cargo-near.git"
rev = "973c4d86230036b1c6f4a3c0f15db16d9e0415ff"

[dependencies]
near-sdk = { workspace = true, features = ["unstable"] }

[dev-dependencies.cargo-near-build]
version = "0.2.0"
git = "https://github.com/dj8yfo/cargo-near.git"
rev = "973c4d86230036b1c6f4a3c0f15db16d9e0415ff"

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
env_logger = "0.9"
