[package]
name = "donation"
version = "0.2.9"
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# fields to configure build with WASM reproducibility, according to specs  
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md 
# image from cargo-near pull#198
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "dj8yfo/sourcescan:0.x.x-dev-git-pull-198"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:7ca2f7ae14d00a4884c3231261b342bf0d1ea4903b81e16bf51ba11dca0f8467"
# build command inside of docker container 
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = ["cargo", "near", "build", "--no-default-features"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = { workspace = true, features = ["legacy"] }

[dev-dependencies]
near-sdk = { workspace = true }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
